# TE3003B_PuzzleBot_TeamBP

./: .gitignore  LICENSE  README.md  package.xml  setup.py
blackpearls_nav2_puzzlebot/: README.md  (+1 more)
src/blackpearls_nav2_puzzlebot/: LICENSE  package.xml  setup.cfg  setup.py
src/blackpearls_nav2_puzzlebot/blackpearls_nav2_puzzlebot/: joint_state_publisher.py  localisation.py  point_stabilisation_controller.py  shapeDrawer.py
src/blackpearls_nav2_puzzlebot/launch/: blackpearls_launch.py  blackpearls_sim_launch.py  gazebo_puzzlebot_launch.py  gazebo_world_launch.py  mapping_launch.py  navigation_launch.py  puzzlebot_gazebo_launch.py
src/blackpearls_nav2_puzzlebot/map/: maps.pgm  maze_map.pgm  maze_map.yaml  prueba2_puzzlebot.pgm  prueba2_puzzlebot.yaml  prueba3_puzzlebot.pgm  prueba3_puzzlebot.yaml  prueba4_puzzlebot.pgm  prueba4_puzzlebot.yaml
src/blackpearls_nav2_puzzlebot/param/: puzzlebot.yaml  slam_toolbox_config.yaml
src/blackpearls_nav2_puzzlebot/urdf/mcr2_control/: gazebo_control.xacro
src/blackpearls_nav2_puzzlebot/urdf/mcr2_mechanical/: puzzlebot_jetson_lidar_base.urdf.xacro
src/blackpearls_nav2_puzzlebot/urdf/mcr2_robots/: puzzlebot_hacker_ed.xacro  puzzlebot_jetson_ed.xacro  puzzlebot_jetson_lidar_ed.xacro
src/blackpearls_nav2_puzzlebot/urdf/mcr2_robots/hacker_ed/: parameters_hacker_ed.xacro
src/blackpearls_nav2_puzzlebot/urdf/mcr2_robots/jetson_ed/: parameters_jetson_ed.xacro
src/blackpearls_nav2_puzzlebot/urdf/mcr2_robots/jetson_lidar_ed/: parameters_jetson_lidar_ed.xacro
src/blackpearls_nav2_puzzlebot/urdf/mcr2_sensors/: lidar.xacro
(+44 files in other folders)
