<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>blackpearls_nav2_puzzlebot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="A01706636@tec.mx">Fabian Erubiel Rojas Yanez</maintainer>
  <license>Apache-2.0</license>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>tf2_ros_py</depend>
  <depend>python3-numpy</depend>
  <depend>python3-transforms3d</depend>
  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>


  <!--<depend>launch_ros</depend>-->
  <depend>ros2launch</depend>
  <depend>urdfdom</depend>
  <depend>rosidl_default_generators</depend>

  <depend>turtlebot3_gazebo</depend>

  <!-- Dependencias de Gazebo -->
  <depend>gazebo_ros_pkgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_dev</depend>
  <!-- Dependencias de Nav2 -->
  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>
  <depend>navigation2</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>\
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
